Fix work history columns from being squished when only a single version (#615)

--- a/app/javascript/frontend/styles/_common.scss
+++ b/app/javascript/frontend/styles/_common.scss
@@ -721,6 +721,7 @@ h4,
 .version-timeline {
   display: flex !important;
   flex-wrap: wrap;
+  width: 100%;
 
   @include media-breakpoint-up(md) {
     flex-wrap: nowrap;
